--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "modern-normalize": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
